Sun Jul 27 01:20:51 2003  Joern Thyssen  <jth@gnubg.org>

	Update board labels dynamically.

	* gtkboard.c (board_invalidate_labels): new function.
	* gtkboard.c (board_set): invalidate labels if turn has changed.
	* gtkprefs.c (GeneralPage): add option for dynamic labels.
	* renderprefs.c (RenderPrefsParam, RenderPrefsCommand): 
	add option for dynamic labels.
	* render.c (CalculateImages): render labels dynamically based
	on who's on roll.
	* render.c (RenderImages): render images needed for dynamic labels.

Sat Jul 26 22:45:35 2003  Joern Thyssen  <jth@gnubg.org>

	Include Holger's arrows in the html export.

	* htmlimages.c (CommandExportHTMLImages): write images
	with arrows if LIBART is present.
	* html.c (printHTMLBoardGNU): use new images.

Sat Jul 26 18:15:27 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c - utilise the combined double/take data and preserve
	rollouts across analyses
	
Sat Jul 26 19:16:45 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintCubeAnalysisTable): more styles.
	* html.c (HTMLPrintMoveAnalysi): use bullet instead of *.

Sat Jul 26 17:18:40 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): oops, get rid of button_clockwise.
	* gtktoolbar.c (ToolbarSetClockwise): new function.

	* gtkboard.c (ReturnHits): new function.
	* gtkboard.c (update_move): first attempt on showing number
	of rolls that hit blots.
	(suggested by Morten Juul)

Sat Jul 26 13:53:07 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintCubeAnalysisTable): bold fontface for essential
	cube decision numbers.
	* html.c (printHTMLBoardBBS): surround BBS board with paragraph
	which has the "page-break-inside: avoid" style.

Sat Jul 26 13:37:53 2003  Joern Thyssen  <jth@gnubg.org>

	* htmlimages.c (CommandExportHTMLImages): draw labels on picture.
	* html.c (printHTMLBoardGNU): labels are now on pictures.

Sat Jul 26 11:01:26 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - pass no-double cube value so money game rollouts of